--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "livewire/livewire": "^2.4",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "3.18.0"
     },
     "require-dev": {
